classDiagram
    class Concept {
        +Guid Id
        +Guid KbId
        +string Name
        +List~Variable~ Variables
        +List~Constraint~ Constraints
        +List~ComputationRelation~ CompRels
        +List~string~ Aliases
        +List~string~ BaseObjects
        +List~SameVariable~ SameVariables
        +List~ConstructRelation~ ConstructRelations
        +List~Property~ Properties
        +List~ConceptRule~ ConceptRules
        +List~Equation~ Equations
    }
    class Variable {
        +string Name
        +string Type
        +int? Length
        +int? Scale
    }
    class ComputationRelation {
        +Guid Id
        +string ConceptName
        +int Flag
        +List~string~ InputVariables
        +int Rank
        +string? ResultVariable
        +string Expression
        +int Cost
    }
    class Equation {
        +Guid Id
        +string Expression
        +List~string~ Variables
        +int Line
        +int Column
    }
    Concept *-- Variable
    Concept *-- ComputationRelation
    Concept *-- Equation
